# katastar_saobracajne_signalizacije

./: .env.example  .gitignore  README.md  dfg_klase_sa_znacenjem.txt  inspect_processed.py  main.py  pyproject.toml  test_geo.py
.streamlit/: config.toml
data/processed/: novi_sad_pois.geojson  novi_sad_traffic.geojson
results/analysis/: broj_znakova_po_tipu.csv  ml_detekcije_vs_katastar.csv  overlay_buffer_glavni_putevi.csv  overlay_clip_ulice.csv  overlay_difference_ulice_van_signalizacije.csv  overlay_intersection_znakovi_glavni_putevi.csv  overlay_union_zone_signalizacije.csv  semafori_u_blizini_raskrsnica.csv  znakovi_najbliza_ulica.csv  znakovi_u_blizini_semafora.csv
results/maps/: heatmap_signalizacije.html
scripts/: train_dfg_colab.py  train_dfg_kaggle.py
src/app/: streamlit_app.py
src/database/: connection.py  create_tables.py  crud.py  insert_osm_to_tables.py  queries.py  seed_manual_data.py
src/geo/: load_data.py  map_view.py  overlay_analysis.py  preprocessing.py  spatial_analysis.py
src/ml/: detector.py
