[project]
name = "katastar-saobracajne-signalizacije"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geoalchemy2>=0.20.0",
    "geopandas>=1.1.4",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyogrio>=0.13.0",
    "python-dotenv>=1.2.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.0",
    "streamlit-folium>=0.27.2",
    "ultralytics>=8.4.90",
]
